Show the bio on mobile devices

--- a/app/templates/home/inc/bio.html
+++ b/app/templates/home/inc/bio.html
@@ -1,4 +1,4 @@
-<div class="page__block page__block--yellow hide-xxs">
+<div class="page__block page__block--yellow">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-10 col-lg-push-1 ffss fsxl fwl lh2">
