--- a/templates/home/inc/bio.html
+++ b/templates/home/inc/bio.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-10 col-lg-push-1 ffss fsxl fwl lh2 fsl-until-sm ">
-                {% blocktrans %}<strong>IRCAM, the Institute for Research and Coordination in Acoustics/Music</strong> is one of the world’s largest public research centers dedicated to musical creation and scientific research. A unique venue where artistic vision converges with scientific and technological innovation, the institute directed by Frank Madlener brings together over 160 collaborators. IRCAM hosts the UMR9912 STMS Ircam-CNRS-UPMC science and technologies research lab.{% endblocktrans %}
+                {{ host_organization.bio|safe }}
             </div>
         </div>
     </div>
