--- a/themes/manifeste2017/templates/home/inc/bio.html
+++ b/themes/manifeste2017/templates/home/inc/bio.html
@@ -2,14 +2,15 @@
 <div class="page__block page__block--accent">
     <div class="container">
         <div class="row">
-            <div class="col-xs-16 col-md-16 col-lg-10 fsxl lh5 ffss fwl">
+            <div class="col-xs-16 col-md-16 col-lg-10 fsxl lh5 ffs fwl">
+                <div class="fsxxl ffss fwb mb2">
+                    MANIFESTE 2017
+                </div>
                 {% if host_organization.bio %}
                     {{ host_organization.bio|safe }}
                 {% else %}
-                        <strong>« LES FORMES DU DIGITAL »</strong> questionnera les enjeux des mutations
-                        formelles au sein d’un monde digitalisé dans les domaines de la musique, de l’art, du
-                        design et de l’architecture au regard des avancées des technosciences. Comment les
-                        champs de création se sont-ils emparés des technologies numériques ?
+                        Un pont entre deux rives, parcouru par une foule de musiciens, chorégraphes et peintres, d’artistes de la lumière, du son et du brouillard, tous animés par la « réciprocité des feux ».<br />
+                        Marquant les 40 ans de l’Ircam, ManiFeste-2017 explore le regard musicien qui, de Scriabine jusqu’aux jeunes compositeurs d’aujourd’hui, est mobilisé par l’expérience visuelle.
                 {% endif %}
             </div>
         </div>
