--- a/themes/manifeste2017/templates/home/inc/bio.html
+++ b/themes/manifeste2017/templates/home/inc/bio.html
@@ -1,17 +1,19 @@
 {% load i18n %}
-<div class="page__block page__block--accent">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-16 col-md-16 col-lg-10 fsxl lh5 ffs fwl">
-                <div class="fsxxl ffss fwb mb2">
-                    MANIFESTE 2017
+<div class="section">
+    <div class="page__block page__block--accent">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-16 col-md-16 col-lg-10 fsxl lh5 ffs fwl">
+                    <div class="fsxxl ffss fwb mb2">
+                        MANIFESTE 2017
+                    </div>
+                    {% if host_organization.bio %}
+                        {{ host_organization.bio|safe }}
+                    {% else %}
+                            Un pont entre deux rives, parcouru par une foule de musiciens, chorégraphes et peintres, d’artistes de la lumière, du son et du brouillard, tous animés par la « réciprocité des feux ».<br />
+                            Marquant les 40 ans de l’Ircam, ManiFeste-2017 explore le regard musicien qui, de Scriabine jusqu’aux jeunes compositeurs d’aujourd’hui, est mobilisé par l’expérience visuelle.
+                    {% endif %}
                 </div>
-                {% if host_organization.bio %}
-                    {{ host_organization.bio|safe }}
-                {% else %}
-                        Un pont entre deux rives, parcouru par une foule de musiciens, chorégraphes et peintres, d’artistes de la lumière, du son et du brouillard, tous animés par la « réciprocité des feux ».<br />
-                        Marquant les 40 ans de l’Ircam, ManiFeste-2017 explore le regard musicien qui, de Scriabine jusqu’aux jeunes compositeurs d’aujourd’hui, est mobilisé par l’expérience visuelle.
-                {% endif %}
             </div>
         </div>
     </div>
