--- a/themes/manifeste2017/templates/home/inc/bio.html
+++ b/themes/manifeste2017/templates/home/inc/bio.html
@@ -3,8 +3,8 @@
     <div class="page__block page__block--accent">
         <div class="container">
             <div class="row">
-                <div class="col-xs-16 col-md-16 col-lg-10 fsxl lh5 ffs fwl">
-                    <div class="fsxxl ffss fwb mb2">
+                <div class="col-xs-16 col-md-16 col-lg-10 fsl lh5 ffs fwl">
+                    <div class="fsxl ffss fwb mb2">
                         MANIFESTE 2017
                     </div>
                     {% if host_organization.bio %}
